--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "next": "15.3.0",
     "next-sitemap": "^4.2.3",
     "payload": "3.40.0",
+    "payload-lexical-typography": "^0.4.0",
     "prism-react-renderer": "^2.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
